--- a/curve_editor/curve_editor.vcxproj.filters
+++ b/curve_editor/curve_editor.vcxproj.filters
@@ -64,9 +64,6 @@
     <Filter Include="Sources\Exedit Hook">
       <UniqueIdentifier>{cfa084d6-1bfd-4ac2-9cf4-23b018ca9d48}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Config">
-      <UniqueIdentifier>{b523de7f-bf57-4aeb-8956-37e575097e5d}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Sources\Util">
       <UniqueIdentifier>{c882058e-4681-45de-86ee-6138e52e6e30}</UniqueIdentifier>
     </Filter>
@@ -78,6 +75,12 @@
     </Filter>
     <Filter Include="Sources\Filter Func">
       <UniqueIdentifier>{81ce0285-14f7-44e9-8f20-55c3905b1610}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Module">
+      <UniqueIdentifier>{b523de7f-bf57-4aeb-8956-37e575097e5d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Headers\Config">
+      <UniqueIdentifier>{7369f4d6-526d-4cbf-941a-f76ea20406c4}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -94,9 +97,6 @@
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="config.hpp">
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="version.hpp">
@@ -123,7 +123,7 @@
     <ClInclude Include="enum.hpp">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="wndproc_menu.hpp">
+    <ClInclude Include="wndproc_toolbar.hpp">
       <Filter>Headers\Window Procedure</Filter>
     </ClInclude>
     <ClInclude Include="theme.hpp">
@@ -276,6 +276,12 @@
     <ClInclude Include="util.hpp">
       <Filter>Headers\Util</Filter>
     </ClInclude>
+    <ClInclude Include="config.hpp">
+      <Filter>Headers\Config</Filter>
+    </ClInclude>
+    <ClInclude Include="preferences.hpp">
+      <Filter>Headers\Config</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="curve.cpp">
@@ -326,7 +332,7 @@
     <ClCompile Include="wndproc_texteditor.cpp">
       <Filter>Sources\Window Procedure</Filter>
     </ClCompile>
-    <ClCompile Include="wndproc_menu.cpp">
+    <ClCompile Include="wndproc_toolbar.cpp">
       <Filter>Sources\Window Procedure</Filter>
     </ClCompile>
     <ClCompile Include="preset.cpp">
@@ -452,7 +458,7 @@
       <Filter>Resources</Filter>
     </None>
     <None Include="curve_editor.def">
-      <Filter>Config</Filter>
+      <Filter>Module</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
