--- a/curve_editor/curve_editor.vcxproj.filters
+++ b/curve_editor/curve_editor.vcxproj.filters
@@ -282,6 +282,9 @@
     <ClInclude Include="preferences.hpp">
       <Filter>Headers\Config</Filter>
     </ClInclude>
+    <ClInclude Include="notification.hpp">
+      <Filter>Headers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="curve.cpp">
